@@ -4,7 +4,7 @@ DIST gnome-desktop-2.22.3.tar.bz2 1444103 RMD160 f1bbba787e3924df0fac25c56f3d703
 DIST gnome-desktop-2.24.3.tar.bz2 1509505 RMD160 b6489965a0baa6056b5c7826418401459ffbf0b9 SHA1 2ebbf2475bb741131b523819fb46e71d4489fa79 SHA256 03b1e08ee1318820f538864e8db492a245848bd727da1412a62de51d4cb76e89
 EBUILD gnome-desktop-2.20.3.ebuild 1303 RMD160 23888da1909bcfe314290eb87d2ae9b55dbc60f3 SHA1 1b96f4d0ccd8dc3cbe2e146aa0796e72284400c5 SHA256 430dd2976f7402dadd82ff3417699c44b8034b62869e4f3f53eafd480355965d
 EBUILD gnome-desktop-2.22.3.ebuild 1359 RMD160 ca1b80a67fa19a19bd832da3e53528a808633abe SHA1 1a6b5dfa489cecb360a0a60b0ef5ccb84c78978d SHA256 83472383dcc2dfc7d8f9dcf77b8e234d13f371abc98df84ecac866294b3960fc
-EBUILD gnome-desktop-2.24.3-r1.ebuild 1898 RMD160 039f6f4427853629ae4ef0ff7151e2673809817b SHA1 3a33eeadd085908246856842aeb950dbb2d76f1d SHA256 a9ed5076cf566bf46253f8ad45ec200ceda28c9cf81d05d47699990ee6c17da6
+EBUILD gnome-desktop-2.24.3-r1.ebuild 1922 RMD160 91a1ca90bf9ce3efa2a7f6c089af78c702a2e44b SHA1 f4ed6c055633b4d25e4781fe05531ea43d5c556a SHA256 ab38ab536f832496eba8af98edc3a0bca495ecc7d5622d1cbdd4750f18837334
 EBUILD gnome-desktop-2.24.3.ebuild 1752 RMD160 a5fce3ffe8cc8d6368b01f4f4d33702cfd1ae99c SHA1 57f76730dd77d5e946e450037a1dc6dcfe7b63b7 SHA256 ff40d3039b1c5863b35300bcfea46c6b0df4bc5eff518430b9ea8162748e00f9
-MISC ChangeLog 30474 RMD160 a868a435f36fbc8cb254aab00ea335408dff0749 SHA1 4041ad943face2c30a55610eda728749db5cd0c0 SHA256 881dab93e73a8acf242c54611b070b6f3a23b63cf3c06deadbb61b217b798f19
+MISC ChangeLog 30604 RMD160 f588828916d58088502f0d8e34e3980d20fff4c9 SHA1 adb5e279e46dbcd95167412c32b326e285fad665 SHA256 386163172a7fe0c785de7501888067c99c832b8a9c4e47b4fa0497ecaebf0e65
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
